--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>♥</title>
-  <link rel="stylesheet" href="стиль.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
