--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ what yet&hellip;
 <address>Made 28 September 2021<br>
   by myself.</address>
 <p>
-<img src="D:\Wallpapers\vR2St77V59Y.jpg" width="520" height="328" alt="Влюблённые коты">
+<img src="vR2St77V59Y.jpg" width="520" height="328" alt="Влюблённые коты">
 
 </body>
 </html>
