--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ what yet&hellip;
 <address>Made 28 September 2021<br>
   by myself.</address>
 <p>
-<img src="vR2St77V59Y.jpg" width="520" height="328" alt="Влюблённые коты">
+<img src="https://i.pinimg.com/736x/88/66/8e/88668e56e3a915cb55b0ec3008139602--true-love-cute-cats.jpg" width="520" height="328" alt="Влюблённые коты">
 
 </body>
 </html>
